--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Objects</title>
+
+    <!-- Stylesheet(s):-->
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+    <!-- Script (s):-->
+    <script type="text/JavaScript" src="js/scripts.js" defer></script>
 </head>
 
 <body>
